# QModernWindow

./: .gitignore  LICENSE  README.md  pyproject.toml
qmodernwindow/: __init__.py  config.py  palette_settings.py  settings.py  window.py
